# Self-Consistent-Field-Theory-MPI

./: README.md  ReadMe  ab  ab.cpp  ab.cpp~  include_files.md  makefile  makefile~  run.sh  src_cpp_functions.md  src_files.md
.cursor/rules/: rules.mdc
AB3D/: ab.cpp  wlz-ab.sh
AB3D/src/: AndersonMix.cpp~  BasicFunc.cpp  CMakeLists.txt  FftwToolkit.cpp  GaussElimination.cpp  Initialization.cpp~  IntegrationToolkit.cpp  MDESolver.cpp  MDESolver.cpp~  SCFTBaseAB.cpp  SCFTBaseAB.cpp~
DG/: DGA.txt
HEX/: HEXA.txt  HEXB.txt
include/: BasicFunc.h  Data.h  DisplayResults.h  FftwToolkit.h  Head.h  Initialization.h  IntegrationToolkit.h  MemFree.h  Mytimer.h  PDESolver.h  SCFTBaseAB.h  SCFTBaseAB.h~  ab.h  config.h  parameter.h
initData/BCC/: BCCA.txt
initData/DG/: DGA_64.txt  phiA.txt  phiA_3D_DG.txt
src/: .Data.cpp.swo  .Initialization.cpp.swo  .SCFTBaseABCstar.cpp.swo  BasicFunc.cpp  Data.cpp  DisplayResults.cpp  FftwToolkit.cpp  Initialization.cpp  MemFree.cpp  PDESolver.cpp  SCFTBaseAB.cpp  SCFTBaseAB.cpp~
